added main.css, removed unused files
Signed-off-by: Thomas Feuerborn <tfeuerbo@gmail.com>

--- a/index.html
+++ b/index.html
@@ -1,26 +1,20 @@
 <!DOCTYPE html>
 <html>
-    <head>
-	<title> Mr Skeltal's Spoopy Shooter</title>
-    </head>
-    <body>
-        <div id="game-container">
-            <div id="output"></div>
-            <canvas id="game"></canvas>
-        </div>
-		<footer>Copyright 2016 Daniel Carapia, Thomas Feuerborn, & Brennan Kinney</footer>
-        <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
-        <script src="setup.js"></script>
-    </body>
-    <style>
-        #game-container{
-            width: 100%;
-            text-align: center;
-        }
-        #game{
-            border-bottom:1px solid #aaa;
-            border-left:5px solid #4a4;
-            margin: 0 auto;
-        }
-    </style>
+
+<head>
+    <meta charset="utf-8">
+    <title> Mr Skeltal's Spoopy Shooter</title>
+    <link rel="stylesheet" type="text/css" href="Assets/main.css">
+</head>
+
+<body>
+    <div id="game-container">
+        <canvas id="game"></canvas>
+        <div id="output"></div>
+    </div>
+    <footer>Copyright 2016 Santa's Little Minions</footer>
+    <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
+    <script src="setup.js"></script>
+</body>
+
 </html>
