--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
         <canvas id="game"></canvas>
         <div id="output"></div>
     </div>
+
+    <div id="stuff">
+        <h3>Controls</h3>
+        <ul>
+            <li>A/left and D/right to move left and right</li>
+            <li>Space to shoot</li>
+            <li>Shift to increase player's movement speed</li>
+            <li>J for Jamie Key</li>
+        </ul>
+        <h3>How to play</h3>
+        <p>The goal is to shoot every target on the level without running out of bullets. You start with 3 lives, and every level you fail will remove a life. Special blue targets will grant you a life when shot first on a level</p>
+    </div>
+
+
     <footer>Copyright 2016 Santa's Little Minions</footer>
     <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
     <script src="setup.js"></script>
