Added real levels, implemented scoring
Signed-off-by: Thomas Feuerborn <tfeuerbo@gmail.com>

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="stuff">
         <h3>Controls</h3>
         <ul>
-            <li>A/left and D/right to move left and right</li>
+            <li>A and D or Arrow Keys to move left and right</li>
             <li>Space to shoot</li>
             <li>Shift to increase player's movement speed</li>
             <li>J for Jamie Key</li>
@@ -28,6 +28,13 @@
 
     <footer>Copyright 2016 Santa's Little Minions</footer>
     <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
+    <!--
+      THOMAS'S OFFLINE CREATEJS SCRIPTS  
+    <script src="createjs/EaselJS-0.8.2/lib/easeljs-0.8.2.combined.js"></script>
+    <script src="createjs/PreloadJS-0.6.2/lib/preloadjs-0.6.2.combined.js"></script>
+    <script src="createjs/SoundJS-0.6.2/lib/soundjs-0.6.2.combined.js"></script>
+    <script src="createjs/TweenJS-0.6.2/lib/tweenjs-0.6.2.combined.js"></script>
+-->
     <script src="setup.js"></script>
 </body>
 
