--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
 
     <footer>Copyright 2016 Santa's Little Minions</footer>
     <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
+    <!--  THOMAS'S OFFLINE CREATEJS SCRIPTS  -->
     <!--
-      THOMAS'S OFFLINE CREATEJS SCRIPTS  
     <script src="createjs/EaselJS-0.8.2/lib/easeljs-0.8.2.combined.js"></script>
     <script src="createjs/PreloadJS-0.6.2/lib/preloadjs-0.6.2.combined.js"></script>
     <script src="createjs/SoundJS-0.6.2/lib/soundjs-0.6.2.combined.js"></script>
     <script src="createjs/TweenJS-0.6.2/lib/tweenjs-0.6.2.combined.js"></script>
--->
+    <!-- -->
     <script src="setup.js"></script>
 </body>
 
