FIXED AN ANNOYING-ASS BUG WHERE I CALLED SETUP TWICE LEAVING ARTIFACTS WHEN TEARDOWN WAS CALLED
Signed-off-by: Thomas Feuerborn <tfeuerbo@gmail.com>

--- a/index.html
+++ b/index.html
@@ -20,30 +20,19 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="Assets/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-    <title> Mr Skeltal's Spoopy Shooter</title>
+    <title>Mr Skeltal's Ghost Invasion</title>
     <link rel="stylesheet" type="text/css" href="Assets/main.css">
 </head>
 
 <body>
-    <h1>Mr Skeltal's Spoopy Halloween Shooter</h1>
+    <!--<h1>Mr Skeltal's Ghost Invasion</h1>-->
+
+    <div class="spacer"></div>
+
     <div id="game-container">
         <canvas id="game"></canvas>
         <div id="output"></div>
     </div>
-
-    <!--
-    <div id="stuff">
-        <h3>Controls</h3>
-        <ul>
-            <li>A and D or Arrow Keys to move left and right</li>
-            <li>Space to shoot</li>
-            <li>Shift to increase player's movement speed</li>
-            <li>J for Jamie Key</li>
-        </ul>
-        <h3>How to play</h3>
-        <p>The goal is to shoot every target on the level without running out of bullets. You start with 3 lives, and every level you fail will remove a life. Special blue targets will grant you a life when shot first on a level</p>
-    </div>
--->
 
     <footer>Copyright 2016 Santa's Little Minions</footer>
     <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
